[package]
name = "baseboard-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
config = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
